# ffmpeg-gui

./: .gitignore  README.md  app.py  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: func.rs  lib.rs  main.rs  state.rs
src/assets/: components.js  layout.css  mappings.js  mocha.css
