[package]
name = "FFmpegGUI"
version = "0.0.1"
description = "Graphical User Interface for FFmpeg"
authors = ["you"]
edition = "2021"

[lib]
name = "ffmpeggui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
